try adding ALL-UNNAMED to properties